# Mi_pecuario_app_BK

./: .env.example  .gitignore  Aqui_empece.py  Base_De_Datos_cam.py  README.md  app.py  config.py  documentacion_backend.txt  documentacion_backend_formal.txt  documentacion_proposito_uso_backend.txt  esquemas.py  forms_DB_CAM.py  infocambs  infocambs.txt  instrucciones_instalacion.txt  pyproject.toml  requirements.txt  routes.py  update_BD_cam.py
db/: session.py
legacy/: Aqui_empece.py  Base_De_Datos_cam.py  esquemas.py  forms_DB_CAM.py  routes.py  update_BD_cam.py
models/: models.py
routes/: animal_routes.py  auth_routes.py  lote_routes.py  user_routes.py
schemas/: user.py
src/services/: animal.service.ts
utils/: email_utils.py  jwt_utils.py
